# mate-window-applets

./: README.md  install-icons.sh  meson.build  meson_options.txt  substitute.sh
data/: meson.build  org.mate.window-applets.gschema.xml
data/icons/mate-window-applets/Black/: index.theme
data/icons/mate-window-applets/White/: index.theme
vapi/: libmatepanelapplet-4.0.vapi
window-buttons-applet/: dialog.ui  meson.build  org.mate.panel.WindowButtonsApplet.mate-panel-applet.in  org.mate.panel.applet.WindowButtonsAppletFactory.service.in  window-button.vala  window-buttons-applet.vala  window-buttons-theme.vala
window-menu-applet/: dialog.ui  meson.build  org.mate.panel.WindowMenuApplet.mate-panel-applet.in  org.mate.panel.applet.WindowMenuAppletFactory.service.in  window-menu-applet.vala  window-menu-button.vala
window-title-applet/: dialog.ui  meson.build  org.mate.panel.WindowTitleApplet.mate-panel-applet.in  org.mate.panel.applet.WindowTitleAppletFactory.service.in  window-title-applet.vala
